# oxygine-lib-template

./: README.md  create_lib_project.py
oxygine-{{project}}/: .hgignore  Android.mk  CMakeLists.txt  README.md
oxygine-{{project}}/android/: AndroidManifest.xml  build.xml
oxygine-{{project}}/android/src/org/oxygine/{{project}}/: {{Project}}Adapter.java
oxygine-{{project}}/src/: {{project}}.cpp  {{project}}.h
oxygine-{{project}}/src/android/: Android{{Project}}.cpp  Android{{Project}}.h
oxygine-{{project}}/src/ios/: ios{{Project}}.h  ios{{Project}}.mm
oxygine-{{project}}/src/sim/: {{Project}}Simulator.cpp  {{Project}}Simulator.h
